--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <title>Hola Mundo</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
-	
+	<script src="jquery-1.6.1.min.js" type="text/javascript"></script>
+	<link rel="stylesheet" href="prettyPhoto.css" type="text/css" media="screen" title="prettyPhoto main stylesheet" charset="utf-8" />
+	<script src="jquery.prettyPhoto.js" type="text/javascript" charset="utf-8"></script>
+
 </head>
 <body>
     <div id="container">
@@ -13,9 +16,26 @@
 	</header>
 	<div id="main">
 		<h2>Hola Mundo1</h2>
-        <img src="ninios_futbol.jpg" />
+		
+		
+      <a href="ninios_futbol.jpg" rel="prettyPhoto[image_map]" title="asd asd"><img src="ninios_futbol.jpg" alt="dasdasd" width="40" /></a>
+      <a href="foto2.png" rel="prettyPhoto[image_map]" title="a sda sd"><img src="foto2.png" alt="asd sd ad" width="40" /></a>
+      <a href="motivo_manos_box.png" rel="prettyPhoto[image_map]" title="a sda ds"><img src="motivo_manos_box.png" alt="a sda sdasd" width="40" /></a>
+      <br/>
+      
 		
 	</div>
 </div>
+
+
+
+
+<script type="text/javascript" charset="utf-8">
+$(document).ready(function(){
+	$("a[rel^='prettyPhoto']").prettyPhoto({animation_speed:'fast',slideshow:false, autoplay_slideshow: false, hideflash: true});
+});
+</script>
+
+
 </body>
 </html>
